[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Enemigos/spr_enemigo_prueba.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Nivel2Enemigo1/Nivel2Enemigo1Control.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nivel2Enemigo1/Nivel2Enemigo1LenguaControl.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Enemigos/Nivel2/Lagarto_1_cabeza.png" type="Texture" id=4]
[ext_resource path="res://Objects/Enemigos/Nivel2Enemigo1Cuerpo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/PowerUp.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0377, 12.0821 )

[sub_resource type="Animation" id=2]
resource_name = "anim_lengua_ataque_1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Rotable/Lengua/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.1 ), Vector2( 3.81198, 0.1 ), Vector2( 0.3, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotable/Lengua/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -89, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotable/Cabeza:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 37.8025, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotable/Mandibula:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -18.692, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rotable/Lengua/Punta:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -89, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.58475, 3.62948 )

[node name="Nivel2Enemigo1" type="Area2D" groups=[
"enemigos",
]]
script = ExtResource( 2 )
powerUp = ExtResource( 6 )
cuerpo = ExtResource( 5 )

[node name="Nivel2Enemigo1Cuerpo" parent="." instance=ExtResource( 5 )]
position = Vector2( 4.68987, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimacionAtaque" type="AnimationPlayer" parent="."]
anims/anim_lengua_ataque_1 = SubResource( 2 )

[node name="TiempoEntreAtaques" type="Timer" parent="."]
one_shot = true

[node name="Rotable" type="Node2D" parent="."]

[node name="Lengua" type="Area2D" parent="Rotable" groups=[
"enemigos",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Rotable/Lengua"]
position = Vector2( 3.61424, -0.0280294 )
scale = Vector2( 0.3, 0.1 )
texture = ExtResource( 1 )
offset = Vector2( -12.1271, 0.0934315 )

[node name="Punta" type="Sprite" parent="Rotable/Lengua"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotable/Lengua"]
shape = SubResource( 3 )

[node name="Mandibula" type="Sprite" parent="Rotable"]
position = Vector2( 4.92039, 2.76577 )
texture = ExtResource( 4 )
offset = Vector2( -4.04321, -2.76577 )
hframes = 2
frame = 1

[node name="Cabeza" type="Sprite" parent="Rotable"]
position = Vector2( 4.93753, 2.79188 )
texture = ExtResource( 4 )
offset = Vector2( -4.06036, -2.79188 )
hframes = 2
[connection signal="timeout" from="TiempoEntreAtaques" to="." method="_on_TiempoEntreAtaques_timeout"]
[connection signal="lengua_destruida" from="Rotable/Lengua" to="." method="_on_Lengua_lengua_destruida"]
